beginning with Oauth, not working atm.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://your-issuer-uri
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://your-jwk-set-uri
