--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,4 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: https://your-issuer-uri
+          jwk-set-uri: https://your-jwk-set-uri
