--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 
         <!-- Spring Security -->
         <dependency>
