--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mysql-container
+    url: jdbc:mysql://localhost:3306/mydatabase
     username: root
     password: my-secret-pw
   jpa:
@@ -12,7 +12,7 @@ spring:
         dialect: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
   security:
     oauth2:
-      resourceserver:
+      resource server:
         jwt:
           issuer-uri: https://your-issuer-uri
           jwk-set-uri: https://your-jwk-set-uri
