--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,11 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
   security:
     oauth2:
       resource server:
         jwt:
           issuer-uri: https://your-issuer-uri
           jwk-set-uri: https://your-jwk-set-uri
+server:
+  port: 8080
